--- a/_posts/2022-07-20-venti.markdown
+++ b/_posts/2022-07-20-venti.markdown
@@ -3,6 +3,6 @@ layout: post
 title:  "Learning Contract Invariants Using Reinforcement Learning"
 categories: research
 authors: "<strong>Junrui Liu</strong>⁺, Yanju Chen⁺, Bryan Tan, Isil Dillig, Yu Feng"
-venue: "To appear at ASE 2022"
-pdf: /pdfs/cider.pdf
+venue: "ASE 2022"
+pdf: https://dl.acm.org/doi/10.1145/3551349.3556962
 ---
