--- a/_posts/2023-06-06-medea.md
+++ b/_posts/2023-06-06-medea.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Conflict-Driven Synthesis for Layout Engines"
 categories: research
 authors: "<strong>Junrui Liu</strong>, Yanju Chen, Eric Atkinson, Yu Feng, Rastislav Bodik"
-venue: "PLDI 2023"
+venue: "PLDI'23"
 pdf: https://dl.acm.org/doi/10.1145/3591246
 ---
 
