--- a/_posts/2023-07-11-coda.md
+++ b/_posts/2023-07-11-coda.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Certifying Zero-Knowledge Circuits with Refinement Types"
 categories: research
 authors: "<strong>Junrui Liu</strong>, Ian Kretz, Hanzhi Liu, Bryan Tan, Jonathan Wang, Yi Sun, Luke Pearson, Anders Miltner, Isil Dillig, Yu Feng"
-venue: "To appear at S&P 2024"
+venue: "S&P'24"
 pdf: https://eprint.iacr.org/2023/547
 ---
 
