--- a/_posts/2023-07-11-coda.md
+++ b/_posts/2023-07-11-coda.md
@@ -4,6 +4,6 @@ title:  "Certifying Zero-Knowledge Circuits with Refinement Types"
 categories: research
 authors: "<strong>Junrui Liu</strong>, Ian Kretz, Hanzhi Liu, Bryan Tan, Jonathan Wang, Yi Sun, Luke Pearson, Anders Miltner, Isil Dillig, Yu Feng"
 venue: "S&P'24"
-pdf: https://eprint.iacr.org/2023/547
+doi: https://doi.org/10.1109/SP54263.2024.00078
 ---
 
