--- a/_posts/2019-01-01-http.md
+++ b/_posts/2019-01-01-http.md
@@ -4,5 +4,5 @@ title:  "A Study of HTTP/2's Server Push Performance Potential"
 categories: research
 authors: "Rui Meireles, <strong>Junrui Liu</strong>, Peter Steenkiste"
 venue: "arXiv manuscript"
-doi: doi:10.48550/arXiv.2207.05885
+doi:   https://doi.org/10.48550/arXiv.2207.05885
 ---
