--- a/_posts/2024-09-01-calico.md
+++ b/_posts/2024-09-01-calico.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Refinement Types for Visualization"
 categories: research
-authors: "<strong>Junrui Liu</strong>⁺, Jingtao Xia⁺, Nicholas Brown, Yanju Chen, Yu Feng"
+authors: "Jingtao Xia + <strong>Junrui Liu</strong>, Nicholas Brown, Yanju Chen, Yu Feng"
 venue: "ASE'24"
 doi: https://doi.org/10.1145/3691620.3695550
 ---
