--- a/_posts/2021-09-01-hecate.md
+++ b/_posts/2021-09-01-hecate.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Tree Traversal Synthesis Using Domain-Specific Symbolic Compilation"
 categories: research
-authors: "Yanju Chen, <strong>Junrui Liu</strong>, Yu Feng, Rastislav Bodik"
-venue: "ASPLOS'22"
+authors: "Yanju Chen, <u>Junrui Liu</u>, Yu Feng, Rastislav Bodik"
+venue: "<a href=\"https://asplos-conference.org/asplos2022/index.html\">ASPLOS'22</a>"
 doi: https://dl.acm.org/doi/10.1145/3503222.3507751
 ---
