--- a/_posts/2023-06-06-medea.md
+++ b/_posts/2023-06-06-medea.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "Conflict-Driven Synthesis for Layout Engines"
 categories: research
-authors: "<strong>Junrui Liu</strong>, Yanju Chen, Eric Atkinson, Yu Feng, Rastislav Bodik"
-venue: "PLDI'23"
+authors: "<u>Junrui Liu</u>, Yanju Chen, Eric Atkinson, Yu Feng, Rastislav Bodik"
+venue: "<a href=\"https://pldi23.sigplan.org/\">PLDI'23</a>"
 doi: https://dl.acm.org/doi/10.1145/3591246
 ---
 
