--- a/_posts/2023-07-11-coda.md
+++ b/_posts/2023-07-11-coda.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "Certifying Zero-Knowledge Circuits with Refinement Types"
 categories: research
-authors: "<strong>Junrui Liu</strong>, Ian Kretz, Hanzhi Liu, Bryan Tan, Jonathan Wang, Yi Sun, Luke Pearson, Anders Miltner, Isil Dillig, Yu Feng"
-venue: "S&P'24"
+authors: "<u>Junrui Liu</u>, Ian Kretz, Hanzhi Liu, Bryan Tan, Jonathan Wang, Yi Sun, Luke Pearson, Anders Miltner, Isil Dillig, Yu Feng"
+venue: "<a href=\"https://sp2024.ieee-security.org/\">S&P'24</a>"
 doi: https://doi.org/10.1109/SP54263.2024.00078
 ---
 
