--- a/_posts/2024-09-01-calico.md
+++ b/_posts/2024-09-01-calico.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Refinement Types for Visualization"
 categories: research
-authors: "Jingtao Xia + <strong>Junrui Liu</strong>, Nicholas Brown, Yanju Chen, Yu Feng"
-venue: "ASE'24"
+authors: "<u>Junrui Liu</u> + Jingtao Xia, Nicholas Brown, Yanju Chen, Yu Feng"
+venue: "<a href=\"https://conf.researchr.org/home/ase-2024\">ASE'24</a>"
 doi: https://doi.org/10.1145/3691620.3695550
 ---
