--- a/_posts/2019-01-01-http.md
+++ b/_posts/2019-01-01-http.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "A Study of HTTP/2's Server Push Performance Potential"
-categories: research
+categories: manuscript
 authors: "Rui Meireles, <u>Junrui Liu</u>, Peter Steenkiste"
 venue: "arXiv manuscript"
 doi:   https://doi.org/10.48550/arXiv.2207.05885
