--- a/_posts/2022-07-20-cider.md
+++ b/_posts/2022-07-20-cider.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Learning Contract Invariants Using Reinforcement Learning"
-categories: research
+categories: paper
 authors: "<u>Junrui Liu</u> + Yanju Chen, Bryan Tan, Isil Dillig, Yu Feng"
 venue: "<a href=\"https://conf.researchr.org/home/ase-2022\">ASE'22</a>"
 doi: https://dl.acm.org/doi/10.1145/3551349.3556962
