--- a/_posts/2024-10-01-tabby.md
+++ b/_posts/2024-10-01-tabby.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  "Tabby: A Synthesis-Aided Compiler for High-Performance Zero-Knowledge Proof Circuits"
-categories: research
+categories: paper
 authors: "<u>Junrui Liu</u>, Jiaxin Song, Yanning Chen, Hanzhi Liu, Hongbo Wen, Luke Pearson, Yanju Chen, Yu Feng"
 venue: "<a href=\"https://2025.splashcon.org/track/OOPSLA\">OOPSLA'25</a> (to appear)"
-doi: https://doi.org/10.1145/3691620.3695550
+# doi: https://doi.org/10.1145/3763110
 ---
