--- a/_posts/2024-10-02-eval.md
+++ b/_posts/2024-10-02-eval.md
@@ -17,7 +17,7 @@ permalink: /eval/
 - "The course was very well thought, and the grading format isnt just helpful but motivates students to learn from mistakes."
 - "Participation is highly encouraged and the learning environment is so good."
 - "Junrui is not only eager to answer questions, but also willing to give guidance on things beyond this class. He would spend time outside of class to provide resources for advanced topics. He would point you where to go if you are interested. He is also a great person to know outside of class. I honestly cannot appreciate more of this class! One of the best classes."
-- "The only thing is I felt [was that] the classes were not enough ☹️. I wish there were four lectures instead of three every week."
+- "The only thing is [that] I felt the classes were not enough ☹️. I wish there were four lectures instead of three every week."
 
 
 ## II. Courses Taught as Teaching Assistant 🧑‍💻
