--- a/_posts/2024-10-02-eval.md
+++ b/_posts/2024-10-02-eval.md
@@ -17,7 +17,7 @@ permalink: /eval/
 - "The course was very well thought, and the grading format isnt just helpful but motivates students to learn from mistakes."
 - "Participation is highly encouraged and the learning environment is so good."
 - "Junrui is not only eager to answer questions, but also willing to give guidance on things beyond this class. He would spend time outside of class to provide resources for advanced topics. He would point you where to go if you are interested. He is also a great person to know outside of class. I honestly cannot appreciate more of this class! One of the best classes."
-- "The only thing is [that] I felt the classes were not enough ☹️. I wish there were four lectures instead of three every week."
+- "The only thing is I felt the classes were not enough ☹️. I wish there were four lectures instead of three every week."
 
 
 ## II. Courses Taught as Teaching Assistant 🧑‍💻
@@ -33,5 +33,5 @@ permalink: /eval/
 ### CS 160 - Compilers (Spring 2025, Spring 2023, Fall 2021)
 
 - "I really like how you made section very engaging!"
-- "Honestly one of the best TA's that I have had in my time here. He is really knowledgable about the subject he is teaching... Very patient and great at being able to turn complex problems into simple solutions. I really hope that he gets the opportunity to teach at some point in his career because all of his students would be very lucky"
-- "Junrui is one of the best TA's I've worked with throughout my undergrad. He always goes above and beyond in helping students. He is extremely accommodating with his office hours, going so far as to be available for whole days to help students with assignments... Without his help, I would not have enjoyed or learned as much from this class"
+- "Honestly one of the best TA's that I have had in my time here. He is really knowledgable about the subject he is teaching... Very patient and great at being able to turn complex problems into simple solutions. I really hope that he gets the opportunity to teach at some point in his career because all of his students would be very lucky."
+- "Junrui is one of the best TA's I've worked with throughout my undergrad. He always goes above and beyond in helping students. He is extremely accommodating with his office hours, going so far as to be available for whole days to help students with assignments... Without his help, I would not have enjoyed or learned as much from this class."
