--- a/_posts/2025-09-25-tao.md
+++ b/_posts/2025-09-25-tao.md
@@ -6,7 +6,6 @@ permalink: /blogs/tao
 date: 2025-09-25
 ---
 
-<!-- # My Experience Running “Leading Computer-Based Labs” Workshop -->
 
 The goal of this writeup is to document my experience running *Leading Computer-Based Labs* as part of UCSB’s [Teaching Assistant Orientation (TAO)](https://otl.ucsb.edu/graduate-students/new-tas) 2025.
 
@@ -171,7 +170,7 @@ So if we assign a score of 1 to “Not useful” and 4 to “Very useful,” the
 - “Great”: 4
 
 ## Conclusion
-Overall, this was a very unique and valuable learning experience for me, and I hope the participants learned a thing or two as well. I now feel just a bit more confident improvising on the spot and facilitating classroom discussions, both of which used to be some of my biggest teaching nightmares. I plan to rerun the same workshop as part of the CS dept’s TA training course next month, and I’ll try to incorporate some of the ideas for improvement that I jotted down here, as well as the participants’ feedback.
+Overall, this was a very unique and valuable learning experience for me, and I hope the participants learned a thing or two as well. I plan to rerun the same workshop as part of the CS dept’s TA training course next month, and I’ll try to incorporate some of the ideas for improvement that I jotted down here, as well as the participants’ feedback.
 
 
 <!-- ## Appendix 1: List of All Concerns/Worries about Leading Computer-Based Labs
