--- a/_posts/2025-09-25-tao.md
+++ b/_posts/2025-09-25-tao.md
@@ -2,7 +2,7 @@
 layout: page
 title:  "My Experience Running “Leading Computer-Based Labs” Workshop"
 categories: blog
-permalink: /blogs/tao
+permalink: /blogs/tao-25
 date: 2025-09-25
 ---
 
