--- a/_posts/2025-09-25-tao.md
+++ b/_posts/2025-09-25-tao.md
@@ -47,7 +47,7 @@ As a side note, I originally planned to connect my own laptop via HDMI, but I di
 I delayed the start of the workshop by 2 minutes to allow the last couple of participants to arrive, scan the QR code to log attendance, and settle in. I have come to understand that delaying the start of any event at UCSB by a few minutes is an unspoken ritual. So I guess it helps to get new TAs acquainted with this wonderful tradition.
 
 ## Segment 2 - Introductions
-I first asked the participants to choose from one of the eight animals they would like to be reborn as, without explaining the reason behind this question. The choice would later be used to divide the participants into groups for discussion. I learned this trick from Olga and Lisa, and found it an effective way to both signal to the participants that the vibe of the event is informal (depending on the prompt), and to act as a “Chekhov’s gun” device that gets the participants hooked since they know something will happen but they don’t know what will happen.
+I first asked the participants to choose from one of the eight animals they would like to be reborn as, without explaining the reason behind this question. The choice would later be used to divide the participants into groups for discussion. I learned this trick from [Olga Faccani](https://www.classics.ucsb.edu/student/olga-faccani/) and [Lisa Berry](https://citral.ucsb.edu/people/lisa-berry), and found it an effective way to both signal to the participants that the vibe of the event is informal (depending on the prompt), and to act as a “Chekhov’s gun” device that gets the participants hooked since they know something will happen but they don’t know what will happen.
 
 
 <img src="/2025-09-25-tao/animals.png" alt="animals" style="width:720px;"/>
@@ -56,7 +56,7 @@ In retrospect, I definitely should have reframed the prompt as “which animal w
 
 I then quickly went over the outline of the workshop. I explicitly acknowledged the fact that there would be a lot of info dumping in the middle segment where I was obliged to go over the logistics of running labs. I promised them that in the last part we would discuss a couple of tricky TA–student interaction scenarios that I *personally* (and other TAs I know) have experienced, which hopefully made it less painful to sit through the logistics part.
 
-After introducing myself—based on last year’s slide, I felt there was a need to explicitly highlight the speaker’s teaching credential, probably to convince the participants that I was indeed qualified to teach this workshop and it would be worth their time—I then had each student introduce themselves, including their name (and pronouns if desired), their department, their choice of animal to be reborn as, and their answers to two prompts:
+After introducing myself, I then had each student introduce themselves, including their name (and pronouns if desired), their department, their choice of animal to be reborn as, and their answers to two prompts:
 1. When was the **first time** you started programming?
 2. What’s your **biggest concern/worry** about teaching computer-based labs?
 Everything except for the second prompt was used in the previous year’s workshop.
@@ -70,9 +70,9 @@ Nevertheless, I do think the prompts (especially the second one) are valuable in
 That said, I feel these introduction prompts can very well be used in cases where it’s ok to spend more time on getting to know the students (like a quarter-long course). Here are some of the things I learned from this segment:
 - Always take quick notes whenever a student speaks: this not only gives them the impression that you genuinely care about them, but also provides valuable references for review after the class. I learned *a lot* from participants’ introductions, especially their responses to the second prompt (will discuss shortly).
 - Always follow up with a student response. (As obvious as this might sound, I was *not* good at doing this in my teaching.) I felt that the follow-ups really helped to make the general vibe warmer. Unfortunately, doing so took a long time during the 10AM workshop, so I cut back on the amount of follow-up for the 11AM workshop, which visibly made the vibe at the 11AM section *less warm* than the 10AM section.
-- The second prompt, which I probably stole from Lisa/Josh in Grad 210, was great. The question is not “*do* you have any concern or worry,” but instead “what concern/worry do you *have*.” This prompt (1) completely normalizes the unease the participants might feel, and signals to them that they were here precisely because they have these completely justified worries; it also gave me plenty of opportunities to follow up to affirm that whatever they worried about had personally happened to me and other experienced TAs, (2) it gave me plenty of anchor points to tie whatever I talked about later in the workshop back to these genuine worries that the participants were having, making the workshop appear more relevant to the participants (and likely helped with engagement when I followed up that “we’ll talk about this concern of yours shortly!”).
+- The second prompt, which I probably stole from [Lisa](https://citral.ucsb.edu/people/lisa-berry) and [Josh](https://citral.ucsb.edu/people/josh-kuntzman) in [Grad 210](https://gradpost.ucsb.edu/blog/career-tools/2022/02/22/graddiv-offers-grad-210-college-and-university-teaching-spring-2022), was great. The question is not “*do* you have any concern or worry,” but instead “what concern/worry do you *have*.” This prompt (1) completely normalizes the unease the participants might feel, and signals to them that they were here precisely because they have these completely justified worries; it also gave me plenty of opportunities to follow up to affirm that whatever they worried about had personally happened to me and other experienced TAs, (2) it gave me plenty of anchor points to tie whatever I talked about later in the workshop back to these genuine worries that the participants were having, making the workshop appear more relevant to the participants (and likely helped with engagement when I followed up that “we’ll talk about this concern of yours shortly!”).
 
-Due to the time limit, I think future iterations of the workshop can skip the one-by-one introductions completely, making more room for group and class discussion. However, I still think it’s possible—and valuable—to collect responses to the second prompt. Here’s a trick to try in the future (which I learned from Lisa in Grad 210): at the beginning of the class, have the participants fill out a very short, anonymous Google form. In this case, “your department” + “your biggest worry” should suffice. Then, in front of the class, use an LLM to cluster all responses into major categories (in fact, I did this manually after the workshop—see the biggest worry section for the results). The speaker can briefly comment on each category: go through some representative worries in each category, validating them while also foreshadowing that they’ll be discussed very soon.
+Due to the time limit, I think future iterations of the workshop can skip the one-by-one introductions completely, making more room for group and class discussion. However, I still think it’s possible—and valuable—to collect responses to the second prompt. Here’s a trick to try in the future (which I learned from Lisa): at the beginning of the class, have the participants fill out a very short, anonymous Google form. In this case, “your department” + “your biggest worry” should suffice. Then, in front of the class, cluster all responses into major categories -- by hand or using LLMs which are actually not bad at this. The speaker can briefly comment on each category: go through some representative worries in each category, validating them while also foreshadowing that they’ll be discussed very soon.
 
 Of course, I didn’t get a chance to try out this method, but here are the results I manually collected in class and summarized through ChatGPT. I hope these results will inform how to improve future iterations of the workshop by responding to participants’ academic backgrounds and real concerns.
 
@@ -113,13 +113,16 @@ A couple of participants commented that their concerns stemmed from their own ex
 Later in the workshop, I was able to tie some of the stuff I talked about back to their concerns. Some of them were unaddressed, or could only be addressed through experience (in my opinion). But it might be a good idea to adapt future iterations of the workshop to take into account some of these issues; simply incorporating them into group discussions on tricky scenarios could be great.
 
 ## Segment 3 - The Info Dump
+
+I added new slides on general lab format and quickly walked through a [sample lab from UCSB CS 8](https://ucsb-cs8.github.io/w20/lab/lab01/), showing the participants what the expectations are for TAs. This new segment was well received, with 3 participants explicitly commenting on it as one of the takeaways from this workshop.
+
 To be frank, I dislike lecturing and slide-reading, but before the workshop, I couldn’t really think of a better way to deliver the logistics stuff (“you need to get THIS key and THIS login account from THIS office if you want to use THIS computer”) and “5 tips of running labs.” I did try injecting more personal stories, warnings, and coercions especially during the part on “don’t touch the students’ keyboard!”  in order to keep the participants from falling asleep, 
 
 Sadly, at least one participant was struggling to keep their eyes open. So I quickly went through the slides so that I could get to the more interesting bit. Nevertheless, participants did find this segment useful according to the evaluation results, with 9 participants saying that “how to field student questions/help them” was the top takeaway, and 6 participants saying that the bit on logistics (physically visiting the lab before their first section) was helpful. Participants (3 of them) also appreciated my impassioned call to not touch the keyboard.
 
 In retrospect, here’s how I might have done this segment differently. One way I can think of, which ties nicely to the next segment on scenario group discussion, is to recast some of the logistics and practical tips into imaginary scenarios. Maybe go through a few of them with the whole class: pose the scenario, let them think for a bit, take volunteer responses, then show a slide with your takes (instead of piling them into group discussion, since these are important enough that *everyone* should get exposed, whereas there are already so many scenarios for group discussion that participants can’t get through all).
 
-I added a slide on general lab format and quickly walked through a sample lab from CS 8, showing the participants what the expectations are for TAs. This new segment was well received, with 3 participants explicitly commenting on it as one of the takeaways from this workshop.
+
 
 ## Segment 4 - Group Scenarios
 This is the fun part—7 participants voted this as the one thing they learned—though covered in much less time than I would have liked. I inherited the group discussion on 8 tricky scenarios from Zach and Ethan. 
