--- a/_posts/2025-09-25-tao.md
+++ b/_posts/2025-09-25-tao.md
@@ -10,9 +10,7 @@ date: 2025-09-25
 The goal of this writeup is to document my experience running *Leading Computer-Based Labs* as part of UCSB’s [Teaching Assistant Orientation (TAO)](https://otl.ucsb.edu/graduate-students/new-tas) 2025.
 
 ## Introduction
-I was provided with the slides from previous years’ iterations of this workshop, developed by Ethan Marzban, Zach Sisco, and other wonderful folks.
-
-Based on the existing materials, I inferred that the learning outcomes of this workshop were for attendees to:
+I was provided with the slides from previous years’ iterations of this workshop, developed by [Ethan Marzban](https://epm027.github.io/), [Zach Sisco](https://zsisco.net/), and other wonderful folks. Based on the existing materials, I inferred that the learning outcomes of this workshop were for attendees to:
 1. Understand the function and general format of computer-based labs at UCSB.
 2. Be aware of the logistics of running labs (locations, keys, communication with the instructor, etc.)
 3. Be able to lead and develop labs based on effective teaching principles.
@@ -20,9 +18,9 @@ Based on the existing materials, I inferred that the learning outcomes of this w
 
 I largely adopted the same materials, while tweaking a few things here and there and trying some new stuff, some of which worked and others didn’t work so well. The slides I used can be found [here](/pdfs/tao-junrui.pdf).
 
-The workshop was run twice, first at 10AM and second at 11AM. Both saw 30 participants. In each section, there were 3–5 she/her participants, with the remaining being he/him, which roughly reflects the (unfortunate) gender imbalance in STEM.
+The workshop was run twice, first at 10AM and second at 11AM. Both saw 30 participants. In each section, there were 3–5 she/her participants, with the remaining being he/him, which reflects the (unfortunate) gender imbalance in STEM.
 
-This was my first experience teaching others how to teach. Compared to teaching technical knowledge, it required me to constantly *improvise* on the spot in order to respond to unanticipated questions from the audience. The workshop also prominently featured group discussion, a method I had rarely used in my own (upper-level, theoretical CS) classes. Needless to say, I learned a lot from this experience.
+This was my first experience teaching others how to teach. Compared to teaching technical knowledge, it required me to constantly *improvise* on the spot in order to respond to unanticipated questions from the audience. The workshop also prominently featured group discussion, a method I had rarely used in my own (upper-level, theoretical-leaning CS) classes. Needless to say, I learned a lot from this experience.
 
 The outline of the workshop is as follows:
 1. Settling in
@@ -34,7 +32,9 @@ The outline of the workshop is as follows:
 In what follows, for each segment in the outline, I will document, analyze, and reflect on what I did, what happened, and what I learned.
 
 ## Segment 1 - Settling In
-Here comes the first challenge: every participant is a new face both for me and for other participants, yet we will only cross paths for 50 minutes of our lives, after which we’ll be unlikely to meet again. This was unlike every teaching experience I’ve had, where in each instance I was given at least a couple of weeks to continually teach the same group of students, so I had the luxury of spending the entirety of the first few weeks to break the ice and establish trust with my students. 
+Here comes the first challenge: every participant is a new face both for me and for other participants, yet we will only cross paths for 50 minutes of our lives, after which we’ll be unlikely to meet again[^1]. 
+
+[^1]: This was unlike every teaching experience I’ve had, where in each instance I was given at least a couple of weeks to continually teach the same group of students, so I had the luxury of spending the entirety of the first few weeks to break the ice and establish trust with students. 
 
 Not possible in this case.
 
@@ -47,12 +47,13 @@ As a side note, I originally planned to connect my own laptop via HDMI, but I di
 I delayed the start of the workshop by 2 minutes to allow the last couple of participants to arrive, scan the QR code to log attendance, and settle in. I have come to understand that delaying the start of any event at UCSB by a few minutes is an unspoken ritual. So I guess it helps to get new TAs acquainted with this wonderful tradition.
 
 ## Segment 2 - Introductions
-I first asked the participants to choose from one of the eight animals they would like to be reborn as, without explaining the reason behind this question. The choice would later be used to divide the participants into groups for discussion. I learned this trick from [Olga Faccani](https://www.classics.ucsb.edu/student/olga-faccani/) and [Lisa Berry](https://citral.ucsb.edu/people/lisa-berry), and found it an effective way to both signal to the participants that the vibe of the event is informal (depending on the prompt), and to act as a “Chekhov’s gun” device that gets the participants hooked since they know something will happen but they don’t know what will happen.
+I first asked the participants to choose from one of the eight animals they would like to be reborn as, without explaining the reason behind this question[^2]. The choice would later be used to divide the participants into groups for discussion. I learned this trick from [Olga Faccani](https://www.classics.ucsb.edu/student/olga-faccani/) and [Lisa Berry](https://citral.ucsb.edu/people/lisa-berry), and found it an effective way to both signal to the participants that the vibe of the event is informal (depending on the prompt), and to act as a “Chekhov’s gun” device that gets the participants hooked since they know something will happen but they don’t know what will happen.
 
 
 <img src="/2025-09-25-tao/animals.png" alt="animals" style="width:720px;"/>
 
-In retrospect, I definitely should have reframed the prompt as “which animal would you like to take care of as a pet (assuming it’s legal and humane to do so)”. Across both workshops, owl was the overwhelmingly popular choice, because it was “the apex predator that eats all of the other animals,” to quote one of the participants. I was completely blindsided by this response, as I expected them to choose simply based on how cute they thought each animal was. Alas, we STEM people are sometimes too rational. (Coincidentally, there were several Spanish native speakers in the room, who joyfully corrected my terrible pronunciation of axolotl.)
+[^2]: In retrospect, I definitely should have reframed the prompt as “which animal would you like to take care of as a pet (assuming it’s legal and humane to do so)”. Across both workshops, owl was the overwhelmingly popular choice, because it was “the apex predator that eats all of the other animals,” to quote one of the participants. I was completely blindsided by this response, as I expected them to choose simply based on how cute they thought each animal was. Alas, we STEM people are sometimes too rational. (Coincidentally, there were several Spanish native speakers in the room, who joyfully corrected my terrible pronunciation of axolotl.)
+
 
 I then quickly went over the outline of the workshop. I explicitly acknowledged the fact that there would be a lot of info dumping in the middle segment where I was obliged to go over the logistics of running labs. I promised them that in the last part we would discuss a couple of tricky TA–student interaction scenarios that I *personally* (and other TAs I know) have experienced, which hopefully made it less painful to sit through the logistics part.
 
@@ -69,12 +70,12 @@ Nevertheless, I do think the prompts (especially the second one) are valuable in
 
 That said, I feel these introduction prompts can very well be used in cases where it’s ok to spend more time on getting to know the students (like a quarter-long course). Here are some of the things I learned from this segment:
 - Always take quick notes whenever a student speaks: this not only gives them the impression that you genuinely care about them, but also provides valuable references for review after the class. I learned *a lot* from participants’ introductions, especially their responses to the second prompt (will discuss shortly).
-- Always follow up with a student response. (As obvious as this might sound, I was *not* good at doing this in my teaching.) I felt that the follow-ups really helped to make the general vibe warmer. Unfortunately, doing so took a long time during the 10AM workshop, so I cut back on the amount of follow-up for the 11AM workshop, which visibly made the vibe at the 11AM section *less warm* than the 10AM section.
+- Always follow up with a student response. (As obvious as this might sound, I had *not* been very good at this in my teaching.) I felt that the follow-ups really helped to make the general vibe warmer. Unfortunately, doing so took a long time during the 10AM workshop, so I cut back on the amount of follow-up for the 11AM workshop, which visibly made the vibe at the 11AM section *less warm* than the 10AM section.
 - The second prompt, which I probably stole from [Lisa](https://citral.ucsb.edu/people/lisa-berry) and [Josh](https://citral.ucsb.edu/people/josh-kuntzman) in [Grad 210](https://gradpost.ucsb.edu/blog/career-tools/2022/02/22/graddiv-offers-grad-210-college-and-university-teaching-spring-2022), was great. The question is not “*do* you have any concern or worry,” but instead “what concern/worry do you *have*.” This prompt (1) completely normalizes the unease the participants might feel, and signals to them that they were here precisely because they have these completely justified worries; it also gave me plenty of opportunities to follow up to affirm that whatever they worried about had personally happened to me and other experienced TAs, (2) it gave me plenty of anchor points to tie whatever I talked about later in the workshop back to these genuine worries that the participants were having, making the workshop appear more relevant to the participants (and likely helped with engagement when I followed up that “we’ll talk about this concern of yours shortly!”).
 
 Due to the time limit, I think future iterations of the workshop can skip the one-by-one introductions completely, making more room for group and class discussion. However, I still think it’s possible—and valuable—to collect responses to the second prompt. Here’s a trick to try in the future (which I learned from Lisa): at the beginning of the class, have the participants fill out a very short, anonymous Google form. In this case, “your department” + “your biggest worry” should suffice. Then, in front of the class, cluster all responses into major categories -- by hand or using LLMs which are actually not bad at this. The speaker can briefly comment on each category: go through some representative worries in each category, validating them while also foreshadowing that they’ll be discussed very soon.
 
-Of course, I didn’t get a chance to try out this method, but here are the results I manually collected in class and summarized through ChatGPT. I hope these results will inform how to improve future iterations of the workshop by responding to participants’ academic backgrounds and real concerns.
+Of course, I didn’t get a chance to try out this method, but here are the results I manually collected in class. I hope these results will inform how to improve future iterations of the workshop by responding to participants’ academic backgrounds and real concerns.
 
 ### Department representation
 Here’s a pie chart of represented departments across two workshops (I definitely have missed a few departments/schools that I’m ignorant of). The two workshops had roughly the same distribution:
@@ -116,7 +117,7 @@ Later in the workshop, I was able to tie some of the stuff I talked about back t
 
 I added new slides on general lab format and quickly walked through a [sample lab from UCSB CS 8](https://ucsb-cs8.github.io/w20/lab/lab01/), showing the participants what the expectations are for TAs. This new segment was well received, with 3 participants explicitly commenting on it as one of the takeaways from this workshop.
 
-To be frank, I dislike lecturing and slide-reading, but before the workshop, I couldn’t really think of a better way to deliver the logistics stuff (“you need to get THIS key and THIS login account from THIS office if you want to use THIS computer”) and “5 tips of running labs.” I did try injecting more personal stories, warnings, and coercions especially during the part on “don’t touch the students’ keyboard!”  in order to keep the participants from falling asleep, 
+To be frank, I dislike lecturing and slide-reading, but before the workshop, I couldn’t really think of a better way to deliver the logistics stuff (“you need to get THIS key and THIS login account from THIS office if you want to use THIS computer”) and “5 tips of running labs.” I did try injecting more personal stories, warnings, and coercions especially during the part on “don’t touch the students’ keyboard!” in order to keep the participants from falling asleep.
 
 Sadly, at least one participant was struggling to keep their eyes open. So I quickly went through the slides so that I could get to the more interesting bit. Nevertheless, participants did find this segment useful according to the evaluation results, with 9 participants saying that “how to field student questions/help them” was the top takeaway, and 6 participants saying that the bit on logistics (physically visiting the lab before their first section) was helpful. Participants (3 of them) also appreciated my impassioned call to not touch the keyboard.
 
@@ -174,6 +175,8 @@ So if we assign a score of 1 to “Not useful” and 4 to “Very useful,” the
 
 ## Conclusion
 Overall, this was a very unique and valuable learning experience for me, and I hope the participants learned a thing or two as well. I plan to rerun the same workshop as part of the CS dept’s TA training course next month, and I’ll try to incorporate some of the ideas for improvement that I jotted down here, as well as the participants’ feedback.
+
+---
 
 
 <!-- ## Appendix 1: List of All Concerns/Worries about Leading Computer-Based Labs
