--- a/_posts/2025-09-25-tao.md
+++ b/_posts/2025-09-25-tao.md
@@ -34,12 +34,12 @@ The outline of the workshop is as follows:
 In what follows, for each segment in the outline, I will document, analyze, and reflect on what I did, what happened, and what I learned.
 
 ## Segment 1 - Settling In
-Here comes the first challenge: every participant is a new face both for me and for other participants, yet we will only cross paths for 50 minutes of our lives, after which we’ll be unlikely to meet again[^1]. 
+Here comes the first challenge: every participant is a new face both for me and for other participants, yet we will only cross paths for 50 minutes of our lives, after which we’ll be unlikely to meet again[^1]. Since the last 1/3 of the workshop is group discussion, I needed to break the ice by the time that happened. Luckily, the participants were all in good spirits and willing to contribute, probably due to a combination of (1) they could sense that I’m a newbie at this job, so they were extra supportive of whatever I did/said, (2) some of the opening activities did help build a welcoming and inclusive environment.
 
 [^1]: This was unlike every teaching experience I’ve had, where in each instance I was given at least a couple of weeks to continually teach the same group of students, so I had the luxury of spending the entirety of the first few weeks to break the ice and establish trust with students. 
 Not possible in this case.
 
-Since the last 1/3 of the workshop is group discussion, I needed to break the ice by the time that happened. Luckily, the participants were all in good spirits and willing to contribute, probably due to a combination of (1) they could sense that I’m a newbie at this job, so they were extra supportive of whatever I did/said, (2) some of the opening activities did help build a welcoming and inclusive environment.
+
 
 I arrived 15 minutes before the start of the workshop to both physically and mentally prepare myself: setting up the projector, writing down the names of 8 cute animals on the whiteboard (I’ll discuss this later), and greeting participants who slowly trickled in. Luckily, in both the 10AM and 11AM workshops, there were at least 1–2 people who knew *me* (because they attended the CS dept’s orientation on the previous day where I was a speaker). This gave me an easier chance to start some chitchat (admittedly not my strength), which led to more small talk among the participants themselves.
 
