--- a/content/blog/cs501.md
+++ b/content/blog/cs501.md
@@ -227,4 +227,4 @@ Since I added a completely new module on autograders this year, I had to remove 
 CS 501 is not a typical CS course, nor is it a standard university course. The pre-defined questions on the end-of-term evaluations gave very little insight into how trainees benefited from each major component of the class. In the future, it will help tremendously to [add custom questions to the survey](https://course-evals.ucsb.edu/instructors/#collapse_3). This will provide the specific feedback needed to continue improving and updating the course.
 
 ## Conclusion
-I definitely learned as much as, if not more than, I taught while redesigning and running CS 501 this Fall. While there is always room for more improvement, I am happy with the progress we made in making the training more practical and structured. If you took CS 501 this Fall, I would love to hear your thoughts in case you didn't get a chance to fill out the course evaluation form. I hope this blog serves as a helpful roadmap for whoever takes the reigns of the program next year! 
+I definitely learned as much as, if not more than, I taught while redesigning and running CS 501 this Fall. While there is always room for more improvement, I am happy with the progress we made in making the training more practical and structured. If you took CS 501 this Fall, I would love to hear your thoughts (in case you didn't get a chance to fill out the course evaluation form). I hope this blog serves as a helpful roadmap for whoever takes the reigns of the program next year! 
